# MedRepoMonitor

./: .gitignore  CMakeLists.txt  MedicalReportMonitor.sln  MedicalReportMonitor.vcxproj  README.md  pdf_calibrator.py  pdf_extractor.py  profile_dimissioni_riab_maugeri.json  profile_rx_gvt.json
.claude/: settings.local.json
.claude/skills/: medical-report-extractor.md
src/: ClaudeAnalyzer.cpp  ClaudeAnalyzer.h  ClipboardHelper.cpp  ClipboardHelper.h  Config.cpp  Config.h  FileWatcher.cpp  FileWatcher.h  PdfExtractor.cpp  PdfExtractor.h  ReportProfile.cpp  ReportProfile.h  TextParser.cpp  TextParser.h  ZoneProfile.cpp  ZoneProfile.h  main.cpp
